# icehydra

./: .gitignore  CMakeLists.txt  README.md  icehydra.c  icehydra.h  main.c
include/: conf.h  icehydra_cmd.h  icehydra_util.h  ih_types.h  list.h  shm_manager.h  unix_socket.h
src/: conf.c  icehydra_util.c  shm_manager.c  unix_socket.c
test/: README.md  build_test.sh  client_test  sub_test.c  test1.json  test1.sh  test2.json  test2.sh
